<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">MobManager</string>
    
    <!-- home -->
    <string name="home_init_set">初始环境设置</string>
    <string name="home_mobile_rtc">手机远程控制</string>
    
    <!-- login -->
    <string name="login_name">1572882203</string>
    <string name="login_pwd">hellokit!@</string>
    <string name="login_check_pwd">登录</string>
    <string name="login_name_hint">QQ号码</string>
    <string name="login_pwd_hint">QQ密码</string>
	<string name="login_pwd_remember">记住密码</string>
	<string name="login_pwd_forget">忘记密码?</string>
	
	<string name="radio_clock">闹钟</string>
	<string name="radio_pet">宠物</string>
	<string name="radio_photo">照片</string>
	<string name="radio_joyctl">欢乐控</string>
	<string name="radio_more">更多..</string>
	
	
	    <!-- 设置闹钟 -->
    
    <string name="add_alarm">"添加小Q闹钟"</string>
    <string name="refresh_alarm">"刷新"</string>
    <string name="upload_alarm">"上传数据"</string>
    <string name="label">"名称"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm" >"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alarm_number">"响铃次数"</string>
    <string name="alarm_interval">"响铃间隔"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置闹钟"</string>
    
    <string name="alarm_done">"完成"</string>
    <string name="alarm_revert">"还原"</string>
    <string name="alarm_delete">"删除闹钟"</string>
    <string name="silent_alarm_summary">"静音"</string>
    
    
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
	
	    <!-- reminder -->
    <string name="add_reminder">"添加小Q提醒"</string>
    <string name="refresh_reminder">"刷新"</string>
    <string name="upload_reminder">"上传数据"</string>
    <string name="set_reminder">"设置提醒"</string>
    <string name="reminder_done">"完成"</string>
    <string name="reminder_delete">"删除提醒"</string>
    
    <string name="enable_reminder">"启用提醒"</string>
    <string name="reminder_name">"名称"</string>
    <string name="reminder_date">"日期"</string>
    <string name="reminder_time">"时间"</string>
    <string name="reminder_content">"内容"</string>
    
    <string name="delete_reminder">"取消提醒"</string>
    <string name="delete_reminder_confirm">"将会取消此提醒。"</string>
    
    
	<!-- pet settings -->
    
    <string name="pet_nickname">"小Q"</string>
    <string name="pet_information_set">"设置"</string>
    
    <string name="pet_save">"保存设置"</string>
    <string name="pet_cancel">"取消"</string>
    
    <string name="set_pet">"设置宠物属性"</string>
    <string name="pet_set_nickname">"昵称"</string>
    <string name="pet_set_portrait">"头像"</string>
    <string name="pet_set_nicklevel">"等级"</string>
    
        <!-- photo manager -->
    <string name="photo_view">"删除全部图片"</string>
    <string name="photo_describ">"欢迎来到小Q图片管理"</string>
    
    <string name="photo_get">获取小Q图片信息</string>
    <string name="photo_getthumb">获取缩略图</string>
    
    <string name="photo_mutioperate">操作</string>
    
    
    <!-- bluetooth -->
    
        <!--  BluetoothChat -->
    <string name="send">发送</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙设备没有打开，离开蓝牙控</string>
    <string name="title_connecting">正在连接中。。。</string>
    <string name="title_connected_to">连接到设备  <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">没有连接</string>

    <!--  DeviceListActivity -->
    <string name="scanning">扫描周围可发现的设备中...</string>
    <string name="select_device">选择一个设备进行连接</string>
    <string name="none_paired">没有已配对的设备</string>
    <string name="none_found">找不到可发现的设备</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">扫描可发现的设备</string>

    <!-- Options Menu -->
    <string name="secure_connect">以安全方式连接设备</string>
    <string name="insecure_connect">以一般方式连接设备</string>
    <string name="discoverable">使设备被发现</string>
    
    <string name="channel_connect">扫描设备</string>
        <!-- wifi -->
    <string name="openwifi">打开wifi</string>
    <string name="closewifi">关闭wifi</string>
    <string name="scanwifi">扫描wifi热点</string>
    <string name="getwifi">获取wifi热点</string>
    <string name="changchat">切换聊天界面</string>
    <string name="closebluetooth">关闭蓝牙</string>
    
    <string name="wifi_state_prompt">当前WiFi状态：</string>
    <string name="wifi_state_getting">WiFi状态获取中。。。</string>
    <string name="current_state">请先连接蓝牙设备</string>
    <string name="getwifi_state">刷新WiFi状态</string>

    
    <string name="wifi_signal">信号强度</string>
    <string name="wifi_password">密码</string>
    <string name="wifi_show_password">显示密码</string>
    <string name="wifi_cancel">取消</string>
    <string name="wifi_connect">连接</string>
    
    <!-- activate -->
    <string name="get_chipid">获取芯片ID</string>
    <string name="get_robid">获取RobID</string>
    <string name="write_robid">写入RobID</string>
    <string name="bound_robid">绑定RobID</string>
    <string name="activate_state_prompt">当前激活状态：</string>
    <string name="activate_current_state">未激活</string>
    
    <!-- prompt -->
    <string name="prompt_offline">对不起，您已经处于离线状态，请登录后再试！</string>
    <string name="prompt_Q_offline">对不起，小Q不在线，您不能获取小Q上面的信息，请上线后重试！</string>
    <string name="prompt_Q_offline_updata">对不起，小Q不在线，您上传的信息可能不会及时同步到小Q！</string>
    <string name="prompt_operate_failed">操作失败，您可能已经处于离线状态!</string>
    
    <string name="prompt_upload_success">数据上传服务器成功</string>
    <string name="prompt_upload_failed">数据上传服务器失败，请稍后再试</string>
    
    <!-- wizard -->
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>

    <string name="submit_confirm_message">Place the order with the deli? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Place order</string>
    
</resources>