<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tabhost_activate"
    >
    <LinearLayout
        android:id="@+id/activate_state_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >  
     
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activate_state_prompt"
        />
        <TextView android:id="@+id/activate_current_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activate_current_state"
            android:ellipsize="marquee"
        />
        
        <TextView android:id="@+id/activate_robid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:ellipsize="marquee"
        />
   </LinearLayout>
   
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button android:id="@+id/button_get_chipid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_chipid"
        />
        <Button android:id="@+id/button_get_robid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_robid"
        />
        
   </LinearLayout> 
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
         <Button android:id="@+id/button_write_robid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_robid"
        />  
        <Button android:id="@+id/button_bound_robid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bound_robid"
        /> 
   </LinearLayout>      
   <ListView android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_weight="1"
    />
   	                             
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/edit_text_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
        />
        <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
        />
    </LinearLayout>
</LinearLayout>
