<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="4dip"
    >
    <ImageView android:id="@+id/pet_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dip"
            android:src="@drawable/ic_launcher" />

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="8dip"
	    android:orientation="horizontal"
	    >
	    <TextView android:id="@+id/namepro"
               android:includeFontPadding="false"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1.0"
               android:layout_marginTop="10dip"
               android:layout_marginBottom="10dip"
               android:paddingRight="6dip"
               android:gravity="right"
               android:textSize="18sp"               
               android:textColor="?android:attr/textColorPrimary"
               android:text="@string/pet_set_nickname"
               />
	    
	    
        <TextView android:id="@+id/pet_nickname"
               android:includeFontPadding="false"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dip"
               android:layout_marginLeft="10dip"
               android:layout_marginBottom="10dip"
               android:paddingRight="6dip"
               android:layout_weight="1.0"
               android:gravity="left"
               android:textSize="18sp"
               android:textColor="?android:attr/textColorPrimary"
               android:text="@string/pet_nickname"
               />
	    
	    </LinearLayout>

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="8dip"
	    android:orientation="horizontal"
	    >
	    <TextView android:id="@+id/levelpro"
               android:includeFontPadding="false"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dip"
               android:layout_weight="1.0"
               android:paddingRight="6dip"
               android:textSize="18sp"
               android:gravity="right"
               android:textColor="?android:attr/textColorPrimary"
               android:text="@string/pet_set_nicklevel"
               />
	    
	    
        <TextView android:id="@+id/pet_nicklevel"
               android:includeFontPadding="false"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dip"
               android:layout_marginBottom="10dip"
               android:paddingRight="6dip"
               android:gravity="left"
               android:layout_weight="1.0"
               android:textSize="18sp"
               android:textColor="?android:attr/textColorPrimary"
               android:text="1"
               />
	    
	    </LinearLayout>

        <!--   android:background="?android:attr/windowBackground" -->
	    <ImageView
	        android:src="@drawable/divider_vertical_dark"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="4dip"
	        android:paddingBottom="4dip"
	        android:scaleType="fitXY"
	        android:gravity="fill_vertical" />
     

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center"
            >

            <Button android:id="@+id/pet_information_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/pet_information_set"
                />

        </LinearLayout>

</LinearLayout>
